--- a/main.css
+++ b/main.css
@@ -7,12 +7,20 @@ body {
 h1,
 h2,
 h3,
-h4, li {
+h4,
+li {
   margin: 5px;
   font-family: 'Fjalla One', sans-serif; }
 
-h3 {
+p {
+  line-height: 1.5; }
+
+h2 {
   font-size: 1.5em; }
+
+a {
+  color: black;
+  text-decoration: none; }
 
 /*
 * === NAVIGATION STYLES ===
@@ -22,7 +30,6 @@ h3 {
   position: fixed;
   right: 3%; }
   .navigation ul {
-    border: 2px solid black;
     padding: 0;
     width: 185px;
     height: 50px;
@@ -47,11 +54,25 @@ h3 {
         height: 31px;
         vertical-align: middle; }
 
+.hoverable ul {
+  width: 50px;
+  transition-delay: .2s; }
+
+.hoverable .link {
+  opacity: 0; }
+
+.hoverable:hover ul {
+  width: 185px !important; }
+
+.hoverable:hover .link {
+  opacity: 1 !important;
+  transition-delay: .5s; }
+
 /*
 * === HEADER STYLES ===
 */
 .header h1 {
-  font-size: 5em;
+  font-size: 5.5em;
   display: inline; }
 
 .header h1:first-child {
@@ -64,17 +85,18 @@ h3 {
   margin-left: 455px; }
 
 .header .logo {
-  width: 232px;
+  width: 280px;
   left: 39%;
-  opacity: .6;
+  opacity: 0.4;
   position: absolute;
-  top: 54px; }
+  top: 70px; }
 
 .header .right {
   position: relative;
   width: 63%;
   margin-left: 37%;
-  height: 72vh; }
+  height: 72vh;
+  min-height: 470px; }
 
 .header .color-block {
   right: 0;
@@ -92,7 +114,7 @@ h3 {
 .header .text-wrapper {
   width: 50%;
   height: 100px;
-  margin: 10% auto;
+  margin: 150px auto;
   left: 0;
   right: 0;
   position: absolute;
@@ -110,17 +132,87 @@ h3 {
 
 .header .sub-text-wrapper {
   width: 65%;
-  margin: 17% auto; }
+  margin: 250px auto; }
+
+@media only screen and (max-width: 1200px) {
+  .header h1 {
+    font-size: 4.7em; }
+  .header h2:first-child {
+    margin-left: 380px; }
+  .header .logo {
+    width: 270px; } }
+
+@media only screen and (max-width: 950px) {
+  .header h1 {
+    font-size: 4.1em; }
+  .header h2:first-child {
+    margin-left: 275px; }
+  .header .right {
+    width: 73%;
+    margin-left: 27%; }
+  .header .text-wrapper {
+    margin: 16% auto;
+    width: 70%; }
+  .header .sub-text-wrapper {
+    margin: 26% auto;
+    width: 70%; }
+  .header .logo {
+    left: 31%;
+    top: 80px; } }
+
+@media only screen and (max-width: 750px) {
+  .header h1 {
+    font-size: 3.6em; }
+  .header h2:first-child {
+    margin-left: 200px; }
+  .header .text-wrapper {
+    margin: 19% auto; }
+  .header .sub-text-wrapper {
+    margin: 30% auto; } }
+
+@media only screen and (max-width: 610px) {
+  .header .right {
+    width: 80%;
+    margin-left: 20%; }
+  .header .text-wrapper {
+    width: 100%; }
+  .header h1 {
+    font-size: 3em; }
+  .header h1:first-child {
+    margin-left: 20px; }
+  .header h2:first-child {
+    margin-left: 10px; }
+  .header .text-wrapper {
+    margin: 190px auto; }
+  .header .sub-text-wrapper {
+    margin: 250px auto; }
+  .header .logo {
+    left: 20%;
+    top: 100px;
+    width: 245px; } }
 
 /*
 * === Home ===
 */
+.about-section {
+  margin: 30px;
+  width: 80%;
+  height: 400px;
+  background: #f8f8f8;
+  -webkit-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
+  -moz-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
+  -o-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
+  transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out; }
+  .about-section .text-wrapper {
+    padding: 100px 15%;
+    width: 55%; }
+    .about-section .text-wrapper h2 {
+      font-size: 2em;
+      margin: 0; }
+
 .featured-wrapper {
-  position: absolute;
-  top: 62vh;
   width: 100%; }
   .featured-wrapper .project-wrapper {
-    border: 2px solid #d1d1d1;
     width: 440px;
     height: 370px;
     width: 95%;
@@ -140,18 +232,31 @@ h3 {
         padding: 25px 25px 0;
         width: 420px;
         right: 12%;
+        overflow: hidden;
+        max-height: 300px;
         bottom: 0; }
         .featured-wrapper .project-wrapper .project .image-wrapper img {
           width: 420px;
           -webkit-box-shadow: 0 0 18px 2px rgba(0, 0, 0, 0.2);
           -moz-box-shadow: 0 0 18px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 18px 2px rgba(0, 0, 0, 0.2); }
-  .featured-wrapper .project-wrapper:nth-child(even) {
-    margin-left: 5%; }
   .featured-wrapper .project-wrapper:nth-child(odd) {
-    border-left: none; }
+    margin-left: 5%; }
     .featured-wrapper .project-wrapper:nth-child(odd) .text-wrapper {
       text-align: right; }
     .featured-wrapper .project-wrapper:nth-child(odd) .image-wrapper {
       right: 0;
       left: 12%; }
+  .featured-wrapper .project-wrapper:nth-child(even) .project {
+    background: #f8f8f8; }
+
+/*
+* === Home ===
+*/
+.work .portfolio-item {
+  display: inline-block;
+  width: 30%; }
+  .work .portfolio-item .portfolio-item-image {
+    width: 100%; }
+    .work .portfolio-item .portfolio-item-image img {
+      width: 100%; }
