--- a/main.css
+++ b/main.css
@@ -292,8 +292,7 @@ a {
 */
 .about-section {
   margin: 30px;
-  width: 80%;
-  height: 490px;
+  height: 520px;
   background: #f8f8f8;
   -webkit-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
   -moz-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
@@ -301,6 +300,8 @@ a {
   transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out; }
   .about-section .icon {
     width: 95px; }
+  .about-section p {
+    line-height: 1.7em; }
   .about-section .text-wrapper {
     padding: 100px 0;
     width: 55%;
@@ -309,6 +310,19 @@ a {
       font-size: 3.4em;
       margin: 0 0 35px;
       font-family: 'Fjalla One', sans-serif; }
+    .about-section .text-wrapper .contact {
+      margin-top: 35px;
+      text-align: center; }
+      .about-section .text-wrapper .contact p {
+        display: inline-block;
+        font-weight: 400; }
+      .about-section .text-wrapper .contact .line {
+        width: 15px;
+        vertical-align: super;
+        display: inline-block;
+        height: 1px;
+        background: black;
+        margin: 0 15px; }
 
 .featured-wrapper {
   width: 100%; }
@@ -427,7 +441,7 @@ a {
   .portfolio #deschutes {
     width: 59%;
     margin: 1% 1% 1% 0;
-    background: #eae3dd; }
+    background: #d8cfc7; }
     .portfolio #deschutes img:nth-child(1) {
       z-index: 1;
       right: 10%;
@@ -519,7 +533,8 @@ a {
 */
 .portfolio-page h3 {
   font-family: "Open Sans";
-  font-size: 2em; }
+  font-size: 2em;
+  padding-bottom: 18px; }
 
 .portfolio-page .hidden-header {
   opacity: 0;
@@ -579,6 +594,20 @@ a {
   color: white;
   font-weight: 400; }
 
+.portfolio-page .info-wrapper .sub-section {
+  display: inline-block;
+  margin: 0 7%;
+  text-align: left;
+  max-width: 260px;
+  vertical-align: top;
+  margin-bottom: 10px; }
+  .portfolio-page .info-wrapper .sub-section h2 {
+    text-transform: uppercase;
+    font-size: 0.9em;
+    font-size: 900; }
+  .portfolio-page .info-wrapper .sub-section p {
+    font-size: 1.2em; }
+
 .portfolio-page .image-section:nth-child(odd) {
   text-align: right; }
 
@@ -601,17 +630,37 @@ a {
     position: absolute;
     top: -10px;
     left: -30px; }
+  .portfolio-page .image-section .two-images-stagger {
+    text-align: center;
+    margin-top: -55px; }
+    .portfolio-page .image-section .two-images-stagger img:nth-child(1) {
+      width: 34%;
+      margin: 55px 70px 55px 0; }
+    .portfolio-page .image-section .two-images-stagger img:nth-child(2) {
+      width: 34%; }
 
 .portfolio-page .section {
-  margin: 130px 40px; }
+  margin: 60px 0;
+  height: 405px; }
+  .portfolio-page .section .bg {
+    width: 100%;
+    height: 600px;
+    background: #f8f8f8; }
   .portfolio-page .section .text-wrapper {
+    padding: 120px 0;
     width: 70%;
     position: relative;
     z-index: 10;
     margin: 0 auto; }
-    .portfolio-page .section .text-wrapper .sub-section {
-      display: inline-block;
-      padding: 10px 25px 12px 0; }
+    .portfolio-page .section .text-wrapper p {
+      line-height: 1.9;
+      width: 80%; }
+
+.portfolio-page .section.info-section {
+  margin-top: 50px;
+  padding: 0;
+  background: none;
+  height: fit-content; }
 
 .zealery .portfolio-header {
   background: #0fb28b; }
@@ -621,14 +670,6 @@ a {
   margin: 30px auto; }
   .zealery .image-section img {
     width: 37%; }
-  .zealery .image-section .two-images-stagger {
-    text-align: center;
-    margin-top: -55px; }
-    .zealery .image-section .two-images-stagger img:nth-child(1) {
-      width: 34%;
-      margin: 55px 70px 55px 0; }
-    .zealery .image-section .two-images-stagger img:nth-child(2) {
-      width: 34%; }
   .zealery .image-section .two-images {
     text-align: center; }
     .zealery .image-section .two-images img:nth-child(1) {
@@ -657,6 +698,17 @@ a {
 .graphic-design .portfolio-header {
   background: #1e66ee; }
 
+.graphic-design .image-section {
+  width: 75%; }
+  .graphic-design .image-section .two-images-stagger {
+    text-align: center;
+    margin-top: -55px; }
+    .graphic-design .image-section .two-images-stagger img:nth-child(1) {
+      width: 34%;
+      margin: 57px 7% 150px 0; }
+    .graphic-design .image-section .two-images-stagger img:nth-child(2) {
+      width: 34%; }
+
 .macro-market .portfolio-header {
   background: #313d68; }
   .macro-market .portfolio-header .image-wrapper {
@@ -668,7 +720,7 @@ a {
     width: 90%; }
 
 .deschutes-river .portfolio-header {
-  background: #e24f4b; }
+  background: #d8cfc7; }
   .deschutes-river .portfolio-header .image-wrapper {
     width: 65%; }
 
@@ -690,7 +742,7 @@ a {
 
 @media only screen and (max-width: 780px) {
   .portfolio-page .portfolio-header {
-    height: 95vh; }
+    height: 80vh; }
     .portfolio-page .portfolio-header .image-wrapper {
       width: 300px;
       left: 0;
@@ -702,18 +754,23 @@ a {
       width: 90%;
       margin: 105px auto; }
   .portfolio-page .section {
-    margin: 130px 5%; }
+    margin: 60px 0; }
     .portfolio-page .section .text-wrapper {
-      width: 100%; }
+      width: 80%; }
+  .portfolio-page .info-wrapper {
+    text-align: center; }
+    .portfolio-page .info-wrapper .sub-section {
+      margin: 0 4%;
+      max-width: 200px; }
   .portfolio-page .image-section {
     width: 100%; } }
 
 @media only screen and (max-width: 450px) {
   .portfolio-page .portfolio-header {
     height: 90vh;
-    min-height: 560px; }
+    min-height: 550px; }
     .portfolio-page .portfolio-header .text-wrapper {
-      margin: 70px auto; }
+      margin: 100px auto; }
       .portfolio-page .portfolio-header .text-wrapper h1 {
         font-size: 2.3em; }
       .portfolio-page .portfolio-header .text-wrapper .type {
@@ -723,6 +780,13 @@ a {
     .portfolio-page .portfolio-header .image-wrapper {
       width: 60%;
       bottom: -110px; }
+  .portfolio-page .section {
+    margin: 30px 0; }
+  .portfolio-page .info-wrapper {
+    margin: 0 5%; }
+    .portfolio-page .info-wrapper .sub-section {
+      margin-bottom: 25px;
+      display: block; }
   .deschutes-river .portfolio-header .image-wrapper {
     bottom: 50px;
     width: 100%;
@@ -746,4 +810,19 @@ a {
   .macro-market .portfolio-header .image-wrapper {
     bottom: 50px;
     width: 100%;
-    right: -125px; } }
+    right: -125px; }
+  .graphic-design .image-section {
+    width: 100%; }
+    .graphic-design .image-section .two-images-stagger img:nth-child(1),
+    .graphic-design .image-section .two-images-stagger img:nth-child(2) {
+      display: block;
+      width: 80%;
+      margin: 0 auto 50px; }
+  .graphic-design .section {
+    height: fit-content; }
+    .graphic-design .section .text-wrapper {
+      width: 90%;
+      padding: 40px 0; }
+      .graphic-design .section .text-wrapper p {
+        line-height: 1.7;
+        width: 98%; } }
