--- a/main.css
+++ b/main.css
@@ -541,7 +541,7 @@ a {
 * === Portfolio Page ===
 */
 .portfolio-page h3 {
-  font-family: "Open Sans";
+  font-family: 'Open Sans', sans-serif;
   font-size: 2em;
   padding-bottom: 18px; }
 
@@ -650,10 +650,10 @@ a {
 
 .portfolio-page .section {
   margin: 60px 0;
-  height: 405px; }
+  height: 385px; }
   .portfolio-page .section .bg {
     width: 100%;
-    height: 600px;
+    height: 525px;
     background: #f8f8f8; }
   .portfolio-page .section .text-wrapper {
     padding: 120px 0;
