--- a/main.css
+++ b/main.css
@@ -650,13 +650,11 @@ a {
 
 .portfolio-page .section {
   margin: 60px 0;
-  height: 385px; }
+  background: #f8f8f8; }
   .portfolio-page .section .bg {
-    width: 100%;
-    height: 525px;
-    background: #f8f8f8; }
+    width: 100%; }
   .portfolio-page .section .text-wrapper {
-    padding: 120px 0;
+    padding: 100px 0;
     width: 70%;
     position: relative;
     z-index: 10;
@@ -753,8 +751,8 @@ a {
   .portfolio-page .portfolio-header {
     height: 80vh; }
     .portfolio-page .portfolio-header .image-wrapper {
-      width: 300px;
-      left: 0;
+      width: 40%;
+      max-width: 250px;
       right: 0;
       margin: auto;
       bottom: -130px; }
@@ -775,24 +773,24 @@ a {
     width: 100%; } }
 
 @media only screen and (max-width: 450px) {
+  .portfolio-page .button {
+    margin: 15px 0; }
   .portfolio-page .portfolio-header {
     height: 90vh;
     min-height: 550px; }
     .portfolio-page .portfolio-header .text-wrapper {
       margin: 100px auto; }
       .portfolio-page .portfolio-header .text-wrapper h1 {
-        font-size: 2.3em; }
+        font-size: 3em; }
       .portfolio-page .portfolio-header .text-wrapper .type {
         font-size: 1em; }
-      .portfolio-page .portfolio-header .text-wrapper p {
-        font-size: 0.9em; }
     .portfolio-page .portfolio-header .image-wrapper {
       width: 60%;
       bottom: -110px; }
   .portfolio-page .section {
     margin: 30px 0; }
   .portfolio-page .info-wrapper {
-    margin: 0 5%; }
+    margin: 50px 5%; }
     .portfolio-page .info-wrapper .sub-section {
       margin-bottom: 25px;
       display: block; }
@@ -801,7 +799,11 @@ a {
     width: 100%;
     right: -125px; }
   .zealery .portfolio-header .image-wrapper {
-    bottom: -150px; }
+    bottom: -151px;
+    width: 56%;
+    max-width: none; }
+  .zealery .portfolio-header .text-wrapper h1 {
+    font-size: 4em; }
   .zealery .image-section img {
     width: 70%;
     margin: 0 auto;
@@ -821,17 +823,17 @@ a {
     width: 100%;
     right: -125px; }
   .graphic-design .image-section {
-    width: 100%; }
+    width: 70%;
+    max-width: none;
+    bottom: -120px; }
     .graphic-design .image-section .two-images-stagger img:nth-child(1),
     .graphic-design .image-section .two-images-stagger img:nth-child(2) {
       display: block;
       width: 80%;
       margin: 0 auto 50px; }
-  .graphic-design .section {
-    height: fit-content; }
-    .graphic-design .section .text-wrapper {
-      width: 90%;
-      padding: 40px 0; }
-      .graphic-design .section .text-wrapper p {
-        line-height: 1.7;
-        width: 98%; } }
+  .graphic-design .section .text-wrapper {
+    width: 90%;
+    padding: 40px 0; }
+    .graphic-design .section .text-wrapper p {
+      line-height: 1.7;
+      width: 98%; } }
