--- a/main.css
+++ b/main.css
@@ -278,13 +278,13 @@ a {
   .header h1 {
     font-size: 3em; }
   .header h1:first-child {
-    margin-left: 20px; }
+    margin-left: 45px; }
   .header h2:first-child {
-    margin-left: 10px; }
+    margin-left: 25px; }
   .header .text-wrapper {
     margin: 120px auto 0; }
   .header .sub-text-wrapper {
-    margin: 180px auto 0;
+    margin: 190px auto 0;
     font-size: 0.9em; } }
 
 /*
@@ -378,7 +378,7 @@ a {
 */
 .portfolio {
   position: relative;
-  padding: 80px 5%; }
+  padding: 50px 5%; }
   .portfolio margin:h2 {
     font-size: 2em; }
   .portfolio h3 {
@@ -518,23 +518,23 @@ a {
   .portfolio .view-work {
     display: none; }
   .portfolio #deschutes img:nth-child(1) {
-    width: 96%;
-    right: -16%;
-    bottom: 41px; }
+    width: 95%;
+    right: -27%;
+    bottom: 10px; }
   .portfolio #deschutes img:nth-child(2) {
-    bottom: -55px;
+    bottom: -84px;
     width: 100%;
     right: -9%; }
   .portfolio #zealery img {
     width: 62%;
-    bottom: -95px; }
+    bottom: -145px; }
   .portfolio #macro img {
     top: inherit;
-    bottom: 40px; }
+    bottom: -30px; }
   .portfolio #music-visualizer img {
-    bottom: 50px; }
+    bottom: 0px; }
   .portfolio #graphic-design img {
-    bottom: -70px;
+    bottom: -120px;
     width: 70%; } }
 
 /*
@@ -731,6 +731,11 @@ a {
   .deschutes-river .portfolio-header .image-wrapper {
     width: 65%; }
 
+.deschutes-river .image-section {
+  width: 60%; }
+  .deschutes-river .image-section img {
+    width: 90%; }
+
 .deschutes-river .portfolio-header .text-wrapper,
 .macro-market .portfolio-header .text-wrapper {
   padding: 170px 5%; }
@@ -770,7 +775,7 @@ a {
       margin: 0 4%;
       max-width: 200px; }
   .portfolio-page .image-section {
-    width: 100%; } }
+    width: 90%; } }
 
 @media only screen and (max-width: 450px) {
   .portfolio-page .button {
@@ -797,21 +802,26 @@ a {
       margin-bottom: 25px;
       display: block; }
   .deschutes-river .portfolio-header .image-wrapper {
-    bottom: 50px;
-    width: 100%;
-    right: -125px; }
+    bottom: -55px;
+    width: 105%;
+    right: -145px;
+    max-width: none; }
   .zealery .portfolio-header .image-wrapper {
-    bottom: -151px;
-    width: 56%;
+    bottom: -185px;
+    width: 60%;
     max-width: none; }
   .zealery .portfolio-header .text-wrapper h1 {
     font-size: 4em; }
   .zealery .image-section {
     width: 80%; }
+    .zealery .image-section .two-images-stagger img:nth-child(1),
+    .zealery .image-section .two-images-stagger img:nth-child(2),
     .zealery .image-section img {
       width: 70%;
       margin: 0 auto;
       display: block; }
+    .zealery .image-section .two-images-stagger img:nth-child(1) {
+      margin: 80px auto; }
     .zealery .image-section .two-images img:nth-child(2) {
       width: 55%;
       left: 0; }
@@ -823,9 +833,10 @@ a {
       top: -60px;
       width: 60%; }
   .macro-market .portfolio-header .image-wrapper {
-    bottom: 50px;
+    bottom: 0;
     width: 100%;
-    right: -125px; }
+    right: -125px;
+    max-width: none; }
   .graphic-design .image-section {
     width: 70%;
     max-width: none;
