--- a/main.css
+++ b/main.css
@@ -833,6 +833,8 @@ a {
     width: 105%;
     right: -145px;
     max-width: none; }
+  .deschutes-river .portfolio-header .text-wrapper h1 {
+    font-size: 2.8em; }
   .zealery .portfolio-header .image-wrapper {
     bottom: -185px;
     width: 60%;
