--- a/main.css
+++ b/main.css
@@ -161,6 +161,8 @@ a {
     top: 0;
     overflow: hidden;
     height: 100%;
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: width 0.5s ease-in-out;
     -moz-transition: width 0.5s ease-in-out;
     -o-transition: width 0.5s ease-in-out;
@@ -204,7 +206,11 @@ a {
   -o-animation: bounce 2s infinite; }
 
 @-webkit-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
     -webkit-transform: translateY(0); }
   40% {
     -webkit-transform: translateY(-30px); }
@@ -212,7 +218,11 @@ a {
     -webkit-transform: translateY(-15px); } }
 
 @-moz-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
     -moz-transform: translateY(0); }
   40% {
     -moz-transform: translateY(-30px); }
@@ -220,7 +230,11 @@ a {
     -moz-transform: translateY(-15px); } }
 
 @-o-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
     -o-transform: translateY(0); }
   40% {
     -o-transform: translateY(-30px); }
@@ -228,7 +242,11 @@ a {
     -o-transform: translateY(-15px); } }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
     transform: translateY(0); }
   40% {
     transform: translateY(-30px); }
