--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ h2,
 h3,
 li {
   margin: 5px;
-  font-family: 'Fjalla One', sans-serif; }
+  font-family: 'Fjalla One', sans-serif !important; }
 
 h2 {
   font-family: 'Open Sans', sans-serif;
@@ -108,6 +108,8 @@ a {
     left: 0;
     right: 0;
     bottom: -80px;
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: bottom 0.5s ease-in-out;
     -moz-transition: bottom 0.5s ease-in-out;
     -o-transition: bottom 0.5s ease-in-out;
@@ -191,6 +193,8 @@ a {
       margin: 0 auto;
       overflow: hidden;
       position: absolute;
+      transform: translate3d(0, 0, 0);
+      -webkit-transform: translate3d(0, 0, 0);
       -webkit-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
       -moz-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
       -o-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
@@ -517,8 +521,14 @@ a {
   opacity: 0;
   position: relative;
   top: 30px;
+  transform: translate3d(0, 0, 0);
+  -webkit-transform: translate3d(0, 0, 0);
   -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000; }
+  -webkit-perspective: 1000;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out; }
 
 @media (max-width: 650px) {
   .portfolio .portfolio-item {
