--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ h2,
 h3,
 li {
   margin: 5px;
-  font-family: 'Fjalla One', sans-serif !important; }
+  font-family: 'Fjalla One', sans-serif; }
 
 h2 {
   font-family: 'Open Sans', sans-serif;
@@ -108,6 +108,7 @@ a {
     left: 0;
     right: 0;
     bottom: -80px;
+    -webkit-backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: bottom 0.5s ease-in-out;
@@ -163,6 +164,7 @@ a {
     top: 0;
     overflow: hidden;
     height: 100%;
+    -webkit-backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
     -webkit-transition: width 0.5s ease-in-out;
@@ -193,6 +195,7 @@ a {
       margin: 0 auto;
       overflow: hidden;
       position: absolute;
+      -webkit-backface-visibility: hidden;
       transform: translate3d(0, 0, 0);
       -webkit-transform: translate3d(0, 0, 0);
       -webkit-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
@@ -417,6 +420,7 @@ a {
     -webkit-transition-delay: 0s;
     transition-delay: 0s; }
   .portfolio .portfolio-item {
+    -webkit-transform-style: preserve-3d;
     display: inline-block;
     width: 50%;
     height: 320px;
@@ -520,15 +524,7 @@ a {
 .hideme {
   opacity: 0;
   position: relative;
-  top: 30px;
-  transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  -webkit-perspective: 1000;
-  -webkit-transition: opacity 0.2s ease-in-out;
-  -moz-transition: opacity 0.2s ease-in-out;
-  -o-transition: opacity 0.2s ease-in-out;
-  transition: opacity 0.2s ease-in-out; }
+  top: 30px; }
 
 @media (max-width: 650px) {
   .portfolio .portfolio-item {
@@ -562,7 +558,7 @@ a {
     top: inherit;
     bottom: -30px; }
   .portfolio #music-visualizer img {
-    bottom: 0px; }
+    bottom: 0; }
   .portfolio #graphic-design img {
     bottom: -120px;
     width: 70%; } }
