--- a/main.css
+++ b/main.css
@@ -5,26 +5,29 @@ body {
 /*
 * === OVERIDE STYLES ===
 */
-h1,
-h2,
-h3,
-li {
-  margin: 5px;
-  font-family: 'Fjalla One', sans-serif; }
+h1 {
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
+  font-weight: 500; }
 
 h2 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2em; }
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
+  font-size: 2em;
+  margin: 5px;
+  font-weight: 500; }
 
 h4 {
   margin: 5px;
   font-weight: 900;
   font-family: 'Open Sans', sans-serif; }
 
+li {
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
+  font-weight: 500; }
+
 p {
   margin: 5px;
   line-height: 1.5;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-weight: 300; }
 
 .button {
@@ -46,7 +49,7 @@ a {
 .navigation {
   z-index: 10;
   position: fixed;
-  right: 3%; }
+  right: 4%; }
   .navigation ul {
     padding: 0;
     width: 185px;
@@ -67,6 +70,7 @@ a {
       list-style-type: none;
       margin: 10px 8px;
       cursor: pointer;
+      font-size: 1.2em;
       display: inline-block; }
       .navigation ul li img {
         height: 31px;
@@ -74,7 +78,7 @@ a {
 
 .hoverable ul {
   width: 50px;
-  transition-delay: .2s; }
+  transition-delay: 0.2s; }
 
 .hoverable .link {
   opacity: 0; }
@@ -84,25 +88,13 @@ a {
 
 .hoverable:hover .link {
   opacity: 1 !important;
-  transition-delay: .5s; }
+  transition-delay: 0.5s; }
 
 /*
 * === HEADER STYLES ===
 */
 .header {
   position: relative; }
-  .header h1 {
-    font-size: 6.5em;
-    display: inline;
-    color: white; }
-  .header h1:first-child {
-    margin-left: 45px; }
-  .header h2 {
-    color: white;
-    opacity: 0.6;
-    display: inline;
-    font-size: 1.7em;
-    font-family: 'Fjalla One', sans-serif; }
   .header .arrow-wrapper {
     position: absolute;
     left: 0;
@@ -141,8 +133,6 @@ a {
     opacity: 0.7;
     bottom: -37px;
     margin: auto; }
-  .header h2:first-child {
-    margin-left: 455px; }
   .header .logo {
     width: 280px;
     left: 39%;
@@ -176,15 +166,13 @@ a {
     width: 100%;
     opacity: 0.9; }
   .header .header-image {
-    width: 60%;
+    width: 65%;
     opacity: 0.8;
     margin: 0 auto;
     display: block; }
   .header .sub-text-wrapper,
   .header .text-wrapper {
-    width: 60%;
     height: 100px;
-    margin: 150px auto;
     left: 0;
     right: 0;
     position: absolute;
@@ -202,9 +190,18 @@ a {
       -moz-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
       -o-transition: width 0.8s ease-in-out, left 0.5s ease-in-out;
       transition: width 0.8s ease-in-out, left 0.5s ease-in-out; }
+  .header .text-wrapper {
+    width: 600px;
+    margin: 145px auto; }
+    .header .text-wrapper #name-image {
+      width: 600px; }
   .header .sub-text-wrapper {
-    width: 65%;
-    margin: 280px auto 0; }
+    width: 850px;
+    margin: 260px auto; }
+    .header .sub-text-wrapper .text #title-image {
+      opacity: 0.6;
+      width: 280px;
+      margin-left: 560px; }
 
 .bounce {
   animation: bounce 2s infinite;
@@ -261,57 +258,70 @@ a {
     transform: translateY(-15px); } }
 
 @media only screen and (max-width: 1200px) {
-  .header h1 {
-    font-size: 4.7em; }
-  .header h2:first-child {
-    margin-left: 380px; }
+  .header .text-wrapper {
+    margin: 120px auto; }
+    .header .text-wrapper h1 {
+      font-size: 5.5em; }
+  .header .sub-text-wrapper {
+    margin: 230px auto; }
   .header .logo {
     width: 270px; } }
 
 @media only screen and (max-width: 950px) {
+  .header .header-image {
+    width: 80%; }
   .header h1 {
-    font-size: 4.1em; }
-  .header h2:first-child {
-    margin-left: 275px; }
+    font-size: 4em; }
   .header .text-wrapper {
-    margin: 16% auto;
-    width: 70%; }
+    width: 500px; }
+    .header .text-wrapper #name-image {
+      width: 500px; }
   .header .sub-text-wrapper {
-    margin: 26% auto 0;
-    width: 70%; }
+    width: 650px;
+    margin: 220px auto; }
+    .header .sub-text-wrapper .text #title-image {
+      opacity: 0.6;
+      width: 250px;
+      margin-left: 320px; }
   .header .logo {
     left: 31%;
     top: 80px; } }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 800px) {
   .header .header-image {
-    width: 125%; }
-  .header h1 {
-    font-size: 3.6em; }
-  .header h2:first-child {
-    margin-left: 200px; }
-  .header .text-wrapper {
-    margin: 19% auto; }
-  .header .sub-text-wrapper {
-    margin: 30% auto; } }
+    width: 120%; } }
 
 @media only screen and (max-width: 610px) {
   .header .header-image {
     width: 195%;
     margin-left: -41%; }
   .header .text-wrapper {
-    width: 100%; }
-  .header h1 {
-    font-size: 3em; }
-  .header h1:first-child {
-    margin-left: 45px; }
-  .header h2:first-child {
-    margin-left: 25px; }
-  .header .text-wrapper {
-    margin: 120px auto 0; }
+    width: 400px;
+    margin: 145px auto 0; }
+    .header .text-wrapper #name-image {
+      width: 400px; }
   .header .sub-text-wrapper {
-    margin: 190px auto 0;
-    font-size: 0.9em; } }
+    width: 600px;
+    margin: 220px auto; }
+    .header .sub-text-wrapper .text #title-image {
+      opacity: 0.6;
+      width: 240px;
+      margin-left: 270px; } }
+
+@media only screen and (max-width: 450px) {
+  .header .header-image {
+    width: 195%;
+    margin-left: -41%; }
+  .header .text-wrapper {
+    width: 260px; }
+    .header .text-wrapper #name-image {
+      width: 260px; }
+  .header .sub-text-wrapper {
+    margin: 200px auto;
+    width: 175px; }
+    .header .sub-text-wrapper .text #title-image {
+      width: 175px;
+      margin-left: 0; } }
 
 /*
 * === Home ===
@@ -334,8 +344,7 @@ a {
     margin: 0 auto; }
     .about-section .text-wrapper h2 {
       font-size: 3.4em;
-      margin: 0 0 35px;
-      font-family: 'Fjalla One', sans-serif; }
+      margin: 0 0 35px; }
     .about-section .text-wrapper .contact {
       margin-top: 35px;
       text-align: center; }
@@ -393,8 +402,8 @@ a {
 @media (max-width: 450px) {
   .about-section {
     height: 555px;
-    margin: 30px auto;
-    width: 95%; }
+    width: 95%;
+    margin: 30px auto; }
     .about-section .text-wrapper {
       padding: 75px 0;
       width: 88%; } }
@@ -404,7 +413,9 @@ a {
 */
 .portfolio {
   position: relative;
-  padding: 50px 5% 100px; }
+  width: 95%;
+  margin: 30px auto;
+  padding-bottom: 50px; }
   .portfolio margin:h2 {
     font-size: 2em; }
   .portfolio h3 {
@@ -604,7 +615,8 @@ a {
       font-size: 1.2em; }
     .portfolio-page .portfolio-header .text-wrapper h1 {
       margin: 0 0 15px;
-      font-size: 4em; }
+      font-size: 4em;
+      line-height: 1.1; }
   .portfolio-page .portfolio-header .image-wrapper {
     width: 25%;
     max-height: 450px;
@@ -627,21 +639,23 @@ a {
   padding: 10px 15px;
   margin: 30px 0;
   color: white;
-  font-weight: 400; }
+  font-weight: 400;
+  font-size: 1em; }
 
-.portfolio-page .info-wrapper .sub-section {
-  display: inline-block;
-  margin: 0 7%;
-  text-align: left;
-  max-width: 260px;
-  vertical-align: top;
-  margin-bottom: 10px; }
-  .portfolio-page .info-wrapper .sub-section h2 {
-    text-transform: uppercase;
-    font-size: 0.9em;
-    font-weight: 900; }
-  .portfolio-page .info-wrapper .sub-section p {
-    font-size: 1.2em; }
+.portfolio-page .info-wrapper {
+  text-align: center; }
+  .portfolio-page .info-wrapper .sub-section {
+    display: inline-block;
+    margin: 0 8%;
+    text-align: left;
+    max-width: 200px;
+    vertical-align: top;
+    margin-bottom: 10px; }
+    .portfolio-page .info-wrapper .sub-section h2 {
+      font-size: 1.2em;
+      font-weight: 500; }
+    .portfolio-page .info-wrapper .sub-section p {
+      font-size: 1em; }
 
 .portfolio-page .image-section:nth-child(odd) {
   text-align: right; }
@@ -793,6 +807,11 @@ a {
     width: 90%; }
 
 @media only screen and (max-width: 950px) {
+  .portfolio-page .info-wrapper {
+    text-align: left; }
+    .portfolio-page .info-wrapper .sub-section {
+      display: inline-block;
+      margin: 0 7%; }
   .portfolio-page .portfolio-header .image-wrapper {
     width: 33%;
     right: 8%; }
@@ -834,11 +853,9 @@ a {
     margin: 60px 0; }
     .portfolio-page .section .text-wrapper {
       width: 80%; }
-  .portfolio-page .info-wrapper {
-    text-align: center; }
-    .portfolio-page .info-wrapper .sub-section {
-      margin: 0 4%;
-      max-width: 200px; }
+  .portfolio-page .info-wrapper .sub-section {
+    margin: 0 4%;
+    max-width: 200px; }
   .portfolio-page .image-section {
     width: 90%; } }
 
@@ -855,7 +872,8 @@ a {
       .portfolio-page .portfolio-header .text-wrapper h1 {
         font-size: 3em; }
       .portfolio-page .portfolio-header .text-wrapper .type {
-        font-size: 1em; }
+        font-size: 1.4em;
+        font-weight: 300; }
     .portfolio-page .portfolio-header .image-wrapper {
       width: 60%;
       bottom: -110px; }
