--- a/main.css
+++ b/main.css
@@ -31,7 +31,7 @@ p {
   font-weight: 300; }
 
 .button {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   text-transform: uppercase;
   font-weight: 800;
   font-size: .9em; }
@@ -580,11 +580,6 @@ a {
 /*
 * === Portfolio Page ===
 */
-.portfolio-page h3 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2em;
-  padding-bottom: 18px; }
-
 .portfolio-page .hidden-header {
   opacity: 0;
   padding-top: 50px;
@@ -695,6 +690,8 @@ a {
 .portfolio-page .section {
   margin: 60px 0;
   background: #f8f8f8; }
+  .portfolio-page .section h1 {
+    margin: 8px 0; }
   .portfolio-page .section .bg {
     width: 100%; }
   .portfolio-page .section .text-wrapper {
@@ -705,7 +702,8 @@ a {
     margin: 0 auto; }
     .portfolio-page .section .text-wrapper p {
       line-height: 1.9;
-      width: 80%; }
+      width: 80%;
+      margin: 0; }
 
 .portfolio-page .section.info-section {
   margin-top: 50px;
