--- a/main.css
+++ b/main.css
@@ -49,7 +49,12 @@ a {
 .navigation {
   z-index: 10;
   position: fixed;
-  right: 4%; }
+  right: 4%;
+  top: -100px;
+  -webkit-transition: top 0.5s ease-in-out;
+  -moz-transition: top 0.5s ease-in-out;
+  -o-transition: top 0.5s ease-in-out;
+  transition: top 0.5s ease-in-out; }
   .navigation ul {
     padding: 0;
     width: 185px;
@@ -76,6 +81,9 @@ a {
         height: 31px;
         vertical-align: middle; }
 
+.navigation-visible {
+  top: 0; }
+
 .hoverable ul {
   width: 50px;
   transition-delay: 0.2s; }
@@ -97,16 +105,17 @@ a {
   position: relative; }
   .header .arrow-wrapper {
     position: absolute;
+    display: none;
     left: 0;
     right: 0;
     bottom: -80px;
     -webkit-backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
     -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: bottom 0.5s ease-in-out;
-    -moz-transition: bottom 0.5s ease-in-out;
-    -o-transition: bottom 0.5s ease-in-out;
-    transition: bottom 0.5s ease-in-out; }
+    -webkit-transition: bottom 0.6s ease-in-out;
+    -moz-transition: bottom 0.6s ease-in-out;
+    -o-transition: bottom 0.6s ease-in-out;
+    transition: bottom 0.6s ease-in-out; }
     .header .arrow-wrapper .about-me {
       position: absolute;
       z-index: 10;
@@ -167,6 +176,7 @@ a {
     opacity: 0.9; }
   .header .header-image {
     width: 65%;
+    max-width: 865px;
     opacity: 0.8;
     margin: 0 auto;
     display: block; }
@@ -221,41 +231,22 @@ a {
   60% {
     -webkit-transform: translateY(-15px); } }
 
-@-moz-keyframes bounce {
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
-    -moz-transform: translateY(0); }
-  40% {
-    -moz-transform: translateY(-30px); }
-  60% {
-    -moz-transform: translateY(-15px); } }
-
-@-o-keyframes bounce {
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
-    -o-transform: translateY(0); }
-  40% {
-    -o-transform: translateY(-30px); }
-  60% {
-    -o-transform: translateY(-15px); } }
-
-@keyframes bounce {
-  0%,
-  100%,
-  20%,
-  50%,
-  80% {
-    transform: translateY(0); }
-  40% {
-    transform: translateY(-30px); }
-  60% {
-    transform: translateY(-15px); } }
+@media only screen and (min-width: 1500px) {
+  .header .text-wrapper {
+    width: 900px;
+    margin: 200px auto; }
+    .header .text-wrapper #name-image {
+      width: 900px; }
+  .header .sub-text-wrapper {
+    width: 650px;
+    margin: 220px auto; }
+    .header .sub-text-wrapper .text #title-image {
+      opacity: 0.6;
+      width: 250px;
+      margin-left: 320px; }
+  .header .logo {
+    left: 31%;
+    top: 80px; } }
 
 @media only screen and (max-width: 1200px) {
   .header .text-wrapper {
@@ -326,12 +317,19 @@ a {
 /*
 * === HEADER STYLES ===
 */
+.footer {
+  width: 95%;
+  margin: 70px auto 20px;
+  border-top: 2px solid black;
+  height: 70px;
+  padding: 20px 0;
+  display: none; }
+
 /*
 * === Home ===
 */
 .about-section {
   margin: 30px;
-  height: 520px;
   background: #f8f8f8;
   -webkit-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
   -moz-transition: margin 0.5s ease-in-out, padding-top 0.5s ease-in-out;
@@ -340,20 +338,24 @@ a {
   .about-section .icon {
     width: 95px; }
   .about-section p {
-    line-height: 1.7em; }
+    line-height: 1.5em;
+    font-size: 1.2em; }
   .about-section .text-wrapper {
-    padding: 100px 0;
-    width: 55%;
+    padding: 120px 0 150px;
+    width: 60%;
     margin: 0 auto; }
     .about-section .text-wrapper h2 {
-      font-size: 3.4em;
-      margin: 0 0 35px; }
+      font-size: 2.5em;
+      font-weight: 500;
+      padding-bottom: 10px;
+      width: 80%; }
     .about-section .text-wrapper .contact {
       margin-top: 35px;
       text-align: center; }
       .about-section .text-wrapper .contact p {
         display: inline-block;
-        font-weight: 400; }
+        font-weight: 400;
+        font-size: 1.2em; }
       .about-section .text-wrapper .contact .line {
         width: 15px;
         vertical-align: super;
@@ -402,6 +404,13 @@ a {
   .featured-wrapper .project-wrapper:nth-child(even) .project {
     background: #f8f8f8; }
 
+@media (max-width: 790px) {
+  .about-section .text-wrapper {
+    width: 70%; }
+    .about-section .text-wrapper h2 {
+      width: 100%;
+      font-size: 2.2em; } }
+
 @media (max-width: 450px) {
   .about-section {
     height: 555px;
@@ -409,7 +418,23 @@ a {
     margin: 30px auto; }
     .about-section .text-wrapper {
       padding: 75px 0;
-      width: 88%; } }
+      width: 88%; }
+      .about-section .text-wrapper h2 {
+        font-size: 1.9em; }
+      .about-section .text-wrapper p {
+        font-size: 1.2em; }
+      .about-section .text-wrapper .contact p {
+        font-size: 1em; }
+      .about-section .text-wrapper .contact .line {
+        margin: 0 10px; } }
+
+@media (max-width: 350px) {
+  .about-section .text-wrapper h2 {
+    font-size: 1.8em; }
+  .about-section .text-wrapper p {
+    font-size: 1em; }
+  .about-section .text-wrapper .contact p {
+    font-size: 0.9em; } }
 
 /*
 * === Work Page ===
@@ -604,6 +629,7 @@ a {
   color: white;
   position: relative;
   height: 90vh;
+  max-height: 675px;
   overflow: hidden; }
   .portfolio-page .portfolio-header .text-wrapper {
     width: 50%;
